Fix scrollbar causing page flicker/jiggle

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,6 +16,8 @@
 }
 
 html {
+  width: 100vw;
+  overflow-x: hidden;
   height: 100%;
   scrollbar-color: var(--accent-font-dark) #0000;
 }
